# MATE19GUI

debug/: CMakeLists.txt  package.xml
debug/src/include/Debug/: debug.h
debug/src/src/: qnode.cpp
driverside/: CMakeLists.txt
driverside/include/Debug/: qnode.h
driverside/src/: ControlScheme.py  IMUsplitter.py  commands  control_handler.py  control_panel.py  crack_detect.py  debug.cpp  dummy_IMU.py  gui.py  imuSimulator.py  imu_splitter.py  joy_subscriber.py  main.cpp  pid.launch  pid_launch.sh  schemePub.py  scheme_sample_control.xml  scheme_sample_control2.xml  servo_sim.launch  test.sh  testNameSpace.py  vector_recombiner.py  vidPub.py  vid_overlay.py  vid_overlay_test.py
driverside/src/inputProc/: 1  joy_subscriber.py
driverside/ui/: debug.ui
robotside/: i2c setup readme
robotside/src/: HL_Planner.py  hexConverter.cpp  hexConverterv2.cpp  i2ctemplateRosSubscriber.cpp  shape_detector_node.py  tester.cpp
